[FIX] Optimize code based on issues identified in find bugs plug-in
 - Handling of null pointer exception.
 - Fix issues with string object comparison.
 - Remove unused fields.
 - Fix issues with new object creation.

Change-Id: I31b99b1eda31a3fec125124aa65892d05edb4fbb
Signed-off-by: Sree Hari Vignesh <sreeharivignesh.b@kalycito.com>