@@ -40,6 +40,7 @@ import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.NullProgressMonitor;
 import org.eclipse.jface.viewers.ICellEditorValidator;
 import org.eclipse.ui.views.properties.IPropertyDescriptor;
+import org.eclipse.ui.views.properties.IPropertySheetEntry;
 import org.eclipse.ui.views.properties.IPropertySource;
 import org.epsg.openconfigurator.console.OpenConfiguratorMessageConsole;
 import org.epsg.openconfigurator.lib.wrapper.Result;
@@ -59,6 +60,8 @@ import org.epsg.openconfigurator.xmlbinding.xdd.TParameterList;
 public class ObjectPropertySource extends AbstractObjectPropertySource
         implements IPropertySource {
 
+    private static final String[] EXPERT_FILTER_FLAG = {
+            IPropertySheetEntry.FILTER_ID_EXPERT };
     private PowerlinkObject plkObject;
 
     public ObjectPropertySource(final PowerlinkObject plkObject) {
@@ -69,20 +72,17 @@ public class ObjectPropertySource extends AbstractObjectPropertySource
         nameDescriptor.setCategory(IPropertySourceSupport.BASIC_CATEGORY);
         objectTypeDescriptor
                 .setCategory(IPropertySourceSupport.ADVANCED_CATEGORY);
-        objectTypeDescriptor
-                .setFilterFlags(IPropertySourceSupport.EXPERT_FILTER_FLAG);
+        objectTypeDescriptor.setFilterFlags(EXPERT_FILTER_FLAG);
 
         dataTypeDescriptor.setCategory(IPropertySourceSupport.BASIC_CATEGORY);
 
         lowLimitDescriptor
                 .setCategory(IPropertySourceSupport.ADVANCED_CATEGORY);
-        lowLimitDescriptor
-                .setFilterFlags(IPropertySourceSupport.EXPERT_FILTER_FLAG);
+        lowLimitDescriptor.setFilterFlags(EXPERT_FILTER_FLAG);
 
         highLimitDescriptor
                 .setCategory(IPropertySourceSupport.ADVANCED_CATEGORY);
-        highLimitDescriptor
-                .setFilterFlags(IPropertySourceSupport.EXPERT_FILTER_FLAG);
+        highLimitDescriptor.setFilterFlags(EXPERT_FILTER_FLAG);
 
         accessTypeDescriptor.setCategory(IPropertySourceSupport.BASIC_CATEGORY);
 
@@ -102,8 +102,7 @@ public class ObjectPropertySource extends AbstractObjectPropertySource
         });
 
         forceActualValue.setCategory(IPropertySourceSupport.ADVANCED_CATEGORY);
-        forceActualValue
-                .setFilterFlags(IPropertySourceSupport.EXPERT_FILTER_FLAG);
+        forceActualValue.setFilterFlags(EXPERT_FILTER_FLAG);
         forceActualValue.setValidator(new ICellEditorValidator() {
 
             @Override
@@ -115,24 +114,20 @@ public class ObjectPropertySource extends AbstractObjectPropertySource
 
         denotationDescriptor
                 .setCategory(IPropertySourceSupport.ADVANCED_CATEGORY);
-        denotationDescriptor
-                .setFilterFlags(IPropertySourceSupport.EXPERT_FILTER_FLAG);
+        denotationDescriptor.setFilterFlags(EXPERT_FILTER_FLAG);
 
         pdoMappingDescriptor.setCategory(IPropertySourceSupport.BASIC_CATEGORY);
         objFlagsDescriptor
                 .setCategory(IPropertySourceSupport.ADVANCED_CATEGORY);
-        objFlagsDescriptor
-                .setFilterFlags(IPropertySourceSupport.EXPERT_FILTER_FLAG);
+        objFlagsDescriptor.setFilterFlags(EXPERT_FILTER_FLAG);
 
         uniqueIDRefDescriptor
                 .setCategory(IPropertySourceSupport.ADVANCED_CATEGORY);
-        uniqueIDRefDescriptor
-                .setFilterFlags(IPropertySourceSupport.EXPERT_FILTER_FLAG);
+        uniqueIDRefDescriptor.setFilterFlags(EXPERT_FILTER_FLAG);
 
         objectErrorDescriptor
                 .setCategory(IPropertySourceSupport.ADVANCED_CATEGORY);
-        objectErrorDescriptor
-                .setFilterFlags(IPropertySourceSupport.EXPERT_FILTER_FLAG);
+        objectErrorDescriptor.setFilterFlags(EXPERT_FILTER_FLAG);
     }
 
     private void addObjectPropertyDescriptors(
@@ -207,7 +202,7 @@ public class ObjectPropertySource extends AbstractObjectPropertySource
      */
     @Override
     public IPropertyDescriptor[] getPropertyDescriptors() {
-        List<IPropertyDescriptor> propertyList = new ArrayList<IPropertyDescriptor>();
+        List<IPropertyDescriptor> propertyList = new ArrayList<>();
         addObjectPropertyDescriptors(propertyList);
 
         IPropertyDescriptor[] propertyDescriptorArray = {};
@@ -268,7 +263,7 @@ public class ObjectPropertySource extends AbstractObjectPropertySource
                 case OBJ_FORCE_ACTUAL_VALUE_ID:
 
                     int val = (plkObject.isObjectForced() == true) ? 0 : 1;
-                    retObj = new Integer(val);
+                    retObj = Integer.valueOf(val);
 
                     break;
                 case OBJ_DENOTATION_ID:
@@ -342,7 +337,7 @@ public class ObjectPropertySource extends AbstractObjectPropertySource
      *         being the error message to display to the end user.
      */
     protected String handleForceActualValue(Object value) {
-        if (plkObject.getActualValue() == null) {
+        if (plkObject.getActualValue().isEmpty()) {
             return "Set some value in the actual value field.";
         } else if (plkObject.getActualValue() != null) {
             if (isModuleObject()) {
